--- a/homepage.html
+++ b/homepage.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Chart View</title>
+    <title>Homepage</title>
     <link href="Style1.css" rel="stylesheet" />
 </head>
 <body>
@@ -62,7 +62,7 @@
     </div>
     <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-advanced-chart.js" async>
   {
-  "width": "985",
+  "width": "1300",
   "height": "610",
   "symbol": "NASDAQ:AAPL",
   "interval": "D",
@@ -84,7 +84,7 @@
         <div class="tradingview-marketWatchWidget-container__widget" style="height: 100%; width: 70%"></div>
         <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-screener.js" async>
 {
-  "width": "100%",
+  "width": "1300",
   "height": 550,
   "defaultColumn": "valuation",
   "defaultScreen": "most_capitalized",
@@ -124,7 +124,7 @@
     ]
   ],
   "chartOnly": false,
-  "width": "100%",
+  "width": "1300",
   "height": "100%",
   "locale": "en",
   "colorTheme": "dark",
@@ -159,7 +159,16 @@
 }</script>
     </div>
     <!-- TradingView Widget END -->
+    <!--These are the ones you need to fix-->
     <!-- TradingView Widget BEGIN -->
+    <style>
+        .tradingview-signalWidget-container {
+            position: absolute; /* Position it relative to the nearest positioned ancestor */
+            right: 0; /* Align it to the right edge of the parent container */
+            top: 255px; /* Set the top position to avoid overlapping with other elements, adjust as necessary */
+            width: 550px; /* Set the width of the widget */
+        }
+    </style>
     <div class="tradingview-signalWidget-container">
         <div class="tradingview-signalWidget-container__widget"></div>
         <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-technical-analysis.js" async>
@@ -168,7 +177,7 @@
   "width": 425,
   "isTransparent": false,
   "height": 450,
-  "symbol": "NASDAQ:CELH",
+  "symbol": "NASDAQ:NVDA",
   "showIntervalTabs": true,
   "displayMode": "single",
   "locale": "en",
@@ -176,6 +185,16 @@
 }</script>
     </div>
     <!-- TradingView Widget END -->
+
+    <style>
+        .tradingview-newsWidget-container {
+            position: absolute; /* Position it relative to the nearest positioned ancestor */
+            right: 0; /* Align it to the right edge of the parent container */
+            top: 710px; /* Set the top position to avoid overlapping with other elements, adjust as necessary */
+            width: 550px; /* Set the width of the widget */
+        }
+    </style>
+
     <!-- TradingView Widget BEGIN -->
     <div class="tradingview-newsWidget-container">
         <div class="tradingview-newsWidget-container__widget"></div>
@@ -184,7 +203,7 @@
   "feedMode": "all_symbols",
   "isTransparent": false,
   "displayMode": "regular",
-  "width": 400,
+  "width": 425,
   "height": 550,
   "colorTheme": "dark",
   "locale": "en"
@@ -192,14 +211,23 @@
     </div>
     <!-- TradingView Widget END -->
     <!-- TradingView Widget BEGIN -->
+
+    <style>
+        .tradingview-econWidget-container {
+            position: absolute; /* Position it relative to the nearest positioned ancestor */
+            right: 0; /* Align it to the right edge of the parent container */
+            top: 1275px; /* Set the top position to avoid overlapping with other elements, adjust as necessary */
+            width: 550px; /* Set the width of the widget */
+        }
+    </style>
     <div class="tradingview-econWidget-container">
         <div class="tradingview-econWidget-container__widget"></div>
         <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-events.js" async>
 {
   "colorTheme": "dark",
   "isTransparent": false,
-  "width": "400",
-  "height": "550",
+  "width": "425",
+  "height": "300",
   "locale": "en",
   "importanceFilter": "-1,0,1"
 }</script>
