--- a/index.html
+++ b/index.html
@@ -1,24 +1,78 @@
 ﻿<!DOCTYPE html>
-
 <html lang="en-us">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Introduction to Investing</title>
     <link href="Style1.css" rel="stylesheet" />
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-color: #003366; /* Dark blue background */
+            color: white; /* White text for readability */
+            scroll-behavior: smooth;
+            position: relative;
+            height: 100vh; /* Full viewport height */
+        }
+
+        h1 {
+            text-align: center;
+            padding: 20px 0;
+            background-color: #89CFF0; /* Light blue */
+            margin-bottom: 20px; /* Space below the header */
+        }
+
+        .text {
+            width: 80%;
+            margin: 80px auto 20px; /* Lowered and centered */
+            padding: 20px;
+            background-color: #fff; /* White background */
+            color: #000; /* Black text color */
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+        }
+
+        nav.navbar {
+            background-color: #89CFF0;
+            padding: 5px 0; /* Thinner navbar */
+            text-align: center;
+            position: absolute; /* Positioning relative to the body */
+            width: 100%;
+            top: 40%; /* Above the halfway point */
+        }
+
+        nav.navbar ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        nav.navbar li {
+            display: inline;
+            margin-right: 10px;
+        }
+
+        nav.navbar a {
+            color: black;
+            text-decoration: none;
+            font-size: 16px;
+        }
+    </style>
 </head>
 <body>
     <h1>Start your Journey with us</h1>
 
-    <p class="text">
-        Hello, this maybe your first time investing with us, but that's ok. Here at International Bytes,
+    <div class="text">
+        Hello, this may be your first time investing with us, but that's okay. Here at International Bits,
         we prioritize our client's financial education. In our app, we will explore the New York Stock Exchange and
         what it has to offer with different learning tools regarding investing your stock portfolio.
-    </p>
+    </div>
+    
     <nav class="navbar">
         <ul>
-            <li><a href="chart-view.html">Chart View<span></span></a></li>
-
+            <li><a href="homepage.html">Homepage</a></li>
         </ul>
     </nav>
 
