--- a/mission-statement.html
+++ b/mission-statement.html
@@ -1,25 +1,78 @@
 ﻿<!DOCTYPE html>
-
 <html lang="en-us">
 <head>
-    <meta charset="utf-8" />
-    <title></title>
+    <meta charset="utf-8">
+    <title>Mission Statement - International Bits</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-color: #003366; /* Dark blue background */
+            color: white; /* White text for readability */
+            scroll-behavior: smooth;
+        }
+
+        h1 {
+            text-align: center;
+            padding: 20px 0;
+            background-color: #89CFF0; /* Light blue, similar to your header/footer */
+            margin-bottom: 20px; /* Space below the header */
+        }
+
+        .text {
+            width: 80%;
+            margin: auto;
+            padding: 20px;
+            background-color: #fff; /* White background for text */
+            color: #000; /* Black text color */
+            border-radius: 8px; /* Rounded corners */
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1); /* Subtle shadow for depth */
+            position: relative; /* For typewriter effect positioning if needed */
+        }
+
+        nav.navbar {
+            background-color: #89CFF0; /* Light blue for navbar, matching the header */
+            padding: 10px 0;
+            text-align: center;
+        }
+
+            nav.navbar ul {
+                list-style-type: none;
+                padding: 0;
+            }
+
+            nav.navbar li {
+                display: inline;
+                margin-right: 10px;
+            }
+
+            nav.navbar a {
+                color: black;
+                text-decoration: none;
+                font-size: 16px;
+            }
+    </style>
 </head>
 <body>
-    <p>
-        At International Bits, our mission is to bridge the gap in financial literacy among the younger generation by providing accessible and engaging resources to learn about the stock market. Through the development of our paper stock trading app, we aspire to empower young individuals with the knowledge, skills, and confidence to navigate the complexities of the financial world.
+    <header>
+        <h1>Mission Statement</h1>
+    </header>
 
-        We recognize the importance of early financial education in shaping lifelong habits and fostering economic empowerment. Our app serves as a platform for hands-on learning, where users can explore the dynamics of stock trading in a risk-free environment. By leveraging real-time market data and interactive simulations, we aim to demystify the stock market and cultivate a generation of informed investors.
+    <div class="text">
+        <p>
+            At International Bits, our mission is to bridge the gap in financial literacy among the younger generation by providing accessible and engaging resources to learn about the stock market. Through the development of our paper stock trading app, we aspire to empower young individuals with the knowledge, skills, and confidence to navigate the complexities of the financial world.
+        </p>
+        <!-- Additional content can continue here -->
+    </div>
 
-        As a group where half of the team are immigrants, we understand the financial hardships early in our lives. Coming from Ghana, Iraq and the Philippines some of our team members immigrated to the United States of America in search of the American dream. Only to experience the means of survival with the limited financial resources we were initially given. Growing up, the goal was to make money to put food on the table. It is our belief that our application can end that era to provide young adults to learn how to invest early on to bring fruit to future generations.
+    <nav class="navbar">
+        <ul>
+            <li><a href="homepage.html">Homepage</a></li>
+        </ul>
+    </nav>
 
-        Beyond mere transactions, our app is designed to instill critical thinking, analytical skills, and responsible investing practices. Through curated educational content, tutorials, and community forums, we seek to nurture a culture of continuous learning and collaboration among our users.
-
-        As a team of dedicated students and innovators, we are committed to advancing financial literacy initiatives and promoting equitable access to financial opportunities. We envision a future where every young person has the tools and resources to build a solid foundation for financial success.
-
-        Together, we embark on a journey to empower the next generation to take control of their financial futures, one trade at a time.
-
-    </p>
+    <script src="Script1.js"></script> <!-- Ensure this script contains the typewriter effect -->
 </body>
 </html>
-
